--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     background-image: url(photo-15.avif);
     opacity: transparent;
     background-color:white;
+  transition: all 0.5s ease;
+  }
+  
+ #background:hover {
+    background-image: url(photo-15.avif);
   }
   
   
