--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     opacity: transparent;
     background-color:white;
   transition: all 0.5s ease;
+  width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   
  #background:hover {
